--- a/d3graph.qmd
+++ b/d3graph.qmd
@@ -1,49 +1,97 @@
 # Interactive graph
 
+```{=html}
 <style>
   * {
     font-family: sans-serif;
   }
 </style>
- 
-<div id="plot">
-</div>
+```
+::: {#plot}
+:::
+
 <!-- Add buttons -->
-<button onclick="update(data_20q1)">2020 Q1</button>
-<button onclick="update(data_20q2)">2020 Q2</button>
-<button onclick="update(data_20q3)">2020 Q3</button>
-<button onclick="update(data_20q4)">2020 Q4</button>
-<button onclick="update(data_21q1)">2021 Q1</button>
-<button onclick="update(data_21q2)">2021 Q2</button>
-<button onclick="update(data_21q3)">2021 Q3</button>
-<button onclick="update(data_21q4)">2021 Q4</button>
+
+<button onclick="update(data_20q1)">
+
+2020 Q1
+
+</button>
+
+<button onclick="update(data_20q2)">
+
+2020 Q2
+
+</button>
+
+<button onclick="update(data_20q3)">
+
+2020 Q3
+
+</button>
+
+<button onclick="update(data_20q4)">
+
+2020 Q4
+
+</button>
+
+<button onclick="update(data_21q1)">
+
+2021 Q1
+
+</button>
+
+<button onclick="update(data_21q2)">
+
+2021 Q2
+
+</button>
+
+<button onclick="update(data_21q3)">
+
+2021 Q3
+
+</button>
+
+<button onclick="update(data_21q4)">
+
+2021 Q4
+
+</button>
 
 <!-- Create a div where the graph will take place -->
-<div id="my_dataviz"></div>
+
+::: {#my_dataviz}
+:::
 
 <h1>COVID-19 death counts of top 5 conditions by quarter in 2020-2021</h1>
 
-<p>The <span style="color:red;">percentage</span> shows the change of the current value you're <span style="color:#6a3d9a;">currently on</span> compared to the prevous value you've <span style="color:#b15928;">previously clicked</span>. Note: percentage only shows up once you've clicked on a button, red indicates percentage increase or no change, and green indicates decrease.
+<p>
 
-The <span style="color:#1f78b4;">blue</span> number shows the total number of death of the quarter you're currently on.<br><br>
+The [percentage]{style="color:red;"} shows the change of the current value you're [currently on]{style="color:#6a3d9a;"} compared to the prevous value you've [previously clicked]{style="color:#b15928;"}. Note: percentage only shows up once you've clicked on a button, red indicates percentage increase or no change, and green indicates decrease.
 
-Earlier, we’ve explored the death count of the top 5 conditions across quarters with line charts. Line chart is effective at showing trends and how different variables correlate with one another, but the tiny difference in slopes are hard to precisely demonstrate how conditions’ increase or decrease across 2 quarters compare to one another. Line charts also tend to overload viewers with information, where viewers tend to focus more on the macroscopic trends across all time periods, instead of focusing on the microscopic comparisons between 2 consecutive periods.
+The [blue]{style="color:#1f78b4;"} number shows the total number of death of the quarter you're currently on.<br>
 
-We believe that D3 interactive graphs is better at visualizing how variables increase and decrease throughout 2 quarters with respect to one another. For each quarter, we plot the 5 conditions. The x axis is ordered where the leftmost condition always has the highest death count across quarters.
+Our previous exploration utilized line charts to trace the death counts of the top 5 health conditions over different quarters. While line charts are adept at showcasing overall trends and correlations among variables, they sometimes fall short in accurately representing the finer details, particularly when it comes to small variations in data slopes between consecutive quarters. Moreover, line charts tend to overload viewers with information, where viewers tend to focus more on the macroscopic trends across all time periods, instead of focusing on the microscopic comparisons between 2 consecutive periods.
 
-From the D3 animation, we can see that death count in 2020 Q2, which is covid’s breakout, spikes almost 1500% for all conditions compared to 2020 Q1.
+To address these limitations, we believe the usage of D3 interactive graphs will provide better visualizations on how variables increase and decrease throughout 2 quarters with respect to one another. In our D3 visualization, each quarter plots the top 5 conditions, with the conditions ordered on the x-axis in descending order of death counts.
 
-2021 Q1 is an interesting quarter. The top 2 conditions of Influenza and Respiratory Failure reach their highest death account in the 2 years. Usually, all 5 variables are positively correlated with one another, yet in 2021 Q1, Hypertensive Disease and Diabetes decrease while Influenza and Respiratory failure increase.
+The D3 animation reveals some insights:
 
-From 2021 Q3 and 2021 Q4, death counts for all conditions become relatively stable.
+1.  In 2020 Q2, the period of the initial surge of COVID-19, there is a dramatic spike in death counts for all conditions, soaring by almost 1500% from the previous quarter.
 
-From 2020 Q1 to 2021 Q4, we can see the massive death counts responsible by each condition at the end of 2 years.
+2.  2021 Q1 is an interesting quarter. The top 2 conditions of Influenza and Respiratory Failure reach their highest death account in the 2 years. Usually, all 5 variables are positively correlated with one another, yet in 2021 Q1, Hypertensive Disease and Diabetes decrease while Influenza and Respiratory failure increase.
+
+3.  From 2021 Q3 and 2021 Q4, death counts for all conditions become relatively stable.
+
+4.  From 2020 Q1 to 2021 Q4, we can see the massive death counts responsible by each condition at the end of 2 years.
 
 </p>
 
-
-
-
-
+```{=html}
 <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+```
+```{=html}
 <script src="scripts/myscript.js"></script>
+```
