--- a/conclusion.qmd
+++ b/conclusion.qmd
@@ -24,10 +24,18 @@ As we conclude our exploration, we reflect on the insights gained and their broa
 
 **Future Directions**
 
-1.  Intra-State Analysis: IWhile the project covered variations within states, such as urban vs. rural differences could be further explored.
+1.  Intra-State Analysis: While the project covered variations within states, such as urban vs. rural differences could be further explored.
 
 2.  Global Comparison: Expanding the analysis to include other countries would allow for a better understanding of how different healthcare systems and policies have influenced COVID-19 outcomes.
 
 3.  Vaccine Impact Study: A study on the impact of vaccination on mortality rates, especially among older groups, could offer more insights for future public health initiatives.
 
 **Lessons Learned**
+
+Throughout this exploration, we learned about the many contributors to COVID-19 death rate, namely age, geographical location, and conditions, and the interesting interaction effects between them, for example the prevalence of diabetes in young age groups.
+
+This exploration also unravelled patterns that we've never dwelt on before aobut COVID-19. For example, it seems reasonable to assume that COVID-19 will be more prevalent in states with a higher population density like New York, especially in the year when COVID-19 first broke out. Yet interestingly in 2021, the pattern of state-wise COVID-19 death features a shift between Northern and Southern states, where Northern states generally improve while Southern state aggravates. Whether this phenomenon is due to any shared public health practices and community awareness in Northern or Sourthern states requires future analysis.
+
+It is interesting how the COVID-19 death counts of most conditions are positively correlated through time, suggesting the presence of comorbidity, which will be interesting for future analysis.
+ 
+Last but not least, we learned about how different visualization graphs can aid with analysis and interpretation of the topic in different ways. For example, time series line chart is adept at showing macroscopic trends, while interactive D3 graphs can depict the microscopic changes between 2 time periods with the aid of animation. 
