--- a/conclusion.qmd
+++ b/conclusion.qmd
@@ -32,7 +32,7 @@ As we conclude our exploration, we reflect on the insights gained and their broa
 
 **Lessons Learned**
 
-Throughout this exploration, we learned about the many contributors to COVID-19 death rate, namely age, geographical location, and conditions, and the interesting interaction effects between them, for example the prevalence of diabetes in young age groups.
+Throughout this exploration, we learned about the many contributors to COVID-19 death rate, namely age, geographical location, and conditions, and the interesting interaction effects between them, for example the prevalence of obesity in young age groups.
 
 This exploration also unravelled patterns that we've never dwelt on before aobut COVID-19. For example, it seems reasonable to assume that COVID-19 will be more prevalent in states with a higher population density like New York, especially in the year when COVID-19 first broke out. Yet interestingly in 2021, the pattern of state-wise COVID-19 death features a shift between Northern and Southern states, where Northern states generally improve while Southern state aggravates. Whether this phenomenon is due to any shared public health practices and community awareness in Northern or Sourthern states requires future analysis.
 
